--- a/Avalonia.Headless.XUnit.v3/Avalonia.Headless.XUnit.v3.csproj
+++ b/Avalonia.Headless.XUnit.v3/Avalonia.Headless.XUnit.v3.csproj
@@ -10,13 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Headless" Version="11.2.0-rc2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.42">
+    <PackageReference Include="Avalonia.Headless" Version="11.2.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="xunit.v3" Version="0.5.0-pre.27" />
+    <PackageReference Include="xunit.v3" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
